--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-range": "^1.10.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "yet-another-react-lightbox": "^3.24.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
